# llmwiki

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: glossary.md  handoff-next-session.md  index.md  milestones.md  open-questions.md
docs/adr/: 001-use-docs-as-source-of-truth.md  002-adopt-personal-team-org-scope.md  003-use-propose-not-backport.md  004-require-redaction-gate.md  005-use-operation-aware-access-control.md  006-adopt-okf-compatible-markdown.md  007-extend-okf-with-llmwiki-namespace.md  008-separate-core-from-domain-apps.md  009-keep-raw-sources-immutable.md  010-use-index-and-log-for-progressive-disclosure.md  011-start-with-file-and-cli-first.md  012-require-human-review-for-org-publish.md  013-finalize-m3-cli-contract.md  014-finalize-m5-maintenance-contract.md  015-store-typed-relations-in-llmwiki-sidecar.md  016-finalize-access-policy-evaluation.md  017-use-rule-based-redaction-scan-initially.md  018-defer-semantic-maintenance-detection.md  019-do-not-add-private-scope.md  020-use-hybrid-search-and-graph-traversal-for-related-retrieval.md  021-trace-docs-and-implementation-with-stable-evidence-links.md  022-distribute-codex-skills-by-responsibility.md  023-use-storage-registry-for-visibility-boundaries.md  index.md  log.md  (+2 more)
docs/references/: index.md
src/: access.rs  codex_session.rs  commands.rs  export.rs  file.rs  graph.rs  ingest.rs  lib.rs  lint.rs  main.rs  markdown.rs  propose.rs  query.rs  redact.rs  related.rs  report.rs  sidecar.rs  skill.rs  storage.rs
tests/: cli_golden.rs
(+45 files in other folders)
