[package]
name = "llmwiki"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llmwiki"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
